# podbase

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/podbase/: __init__.py  cli.py  config.py  db.py  models.py
src/podbase/ingest/: download.py  rss.py
src/podbase/search/: fts.py
src/podbase/transcribe/: chunk.py  pipeline.py  whisper.py
tests/: conftest.py  test_chunk.py  test_cli.py  test_config.py  test_db.py  test_search.py  test_whisper.py
