[project]
name = "podbase"
version = "0.1.0"
description = "Maintain a searchable database of podcast transcripts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.0",
    "feedparser>=6.0.0",
    "httpx>=0.27.0",
    "typer>=0.15.0",
    "pydantic>=2.0.0",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]
gpu = [
    "nvidia-cublas-cu12>=12.0",
    "nvidia-cuda-runtime-cu12>=12.0",
]

[project.scripts]
podbase = "podbase.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podbase"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
